# mappingDronePlanner

./: crossingOptimization.py  dataFilter.py  dataFilter_old.py  env.py  generate2points.py  informed_rrt_star.py  planner.py  plotting.py  refuel.py  rrt_connect.py  utils.py
coverage_path_planner/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
coverage_path_planner/gk_ma-prefix/src/gk_ma-stamp/: download-gk_ma.cmake  extract-gk_ma.cmake
coverage_path_planner/gk_ma-prefix/tmp/: gk_ma-cfgcmd.txt
coverage_path_planner/gtsp_instances-prefix/src/gtsp_instances-stamp/: download-gtsp_instances.cmake  extract-gtsp_instances.cmake
coverage_path_planner/include/: coverage_planner.h  env.hpp  grid_service.hpp  polygon_planner_base.h  refuel_planner.hpp  ros_interface.h  shortest_path_planner.h
coverage_path_planner/src/: coverage_planner.cc  polygon_planner_base.cc  shortest_path_planner.cc
coverage_path_planner/src/polygon_coverage_geometry/include/polygon_coverage_geometry/: cgal_comm.h  cgal_definitions.h  graph_base.h  test_comm.h
coverage_path_planner/src/polygon_coverage_geometry/src/: bcd.cc  boolean.cc  cgal_comm.cc  decomposition.cc  offset.cc  sweep.cc  triangulation.cc  visibility_graph.cc  visibility_polygon.cc
coverage_path_planner/src/polygon_coverage_geometry/test/: bcd-test.cpp
coverage_path_planner/src/polygon_coverage_planners/include/polygon_coverage_planners/: timing.h
coverage_path_planner/src/polygon_coverage_planners/include/polygon_coverage_planners/graphs/: sweep_plan_graph.h
coverage_path_planner/src/polygon_coverage_planners/include/polygon_coverage_planners/sensor_models/: frustum.h
coverage_path_planner/src/polygon_coverage_planners/src/cost_functions/: path_cost_functions.cc
coverage_path_planner/src/polygon_coverage_planners/src/graphs/: gtspp_product_graph.cc  sweep_plan_graph.cc
coverage_path_planner/src/polygon_coverage_planners/src/planners/: polygon_stripmap_planner.cc  polygon_stripmap_planner_exact.cc  polygon_stripmap_planner_exact_preprocessed.cc
coverage_path_planner/src/polygon_coverage_solvers/include/polygon_coverage_solvers/: combinatorics.h  gk_ma.h
coverage_path_planner/src/polygon_coverage_solvers/include/polygon_coverage_solvers/impl/: graph_base_impl.h
coverage_path_planner/src/polygon_coverage_solvers/src/: boolean_lattice.cc  combinatorics.cc  gk_ma.cc
coverage_path_planner/src/polygon_coverage_solvers/test/: gk_ma-test.cpp
data/: path_crossing.csv  path_planned.csv  path_planned_2.csv  path_points.csv  path_points_2.csv  test_area.csv
data/obstacles/: 150.csv  180.csv  boundary.csv  fsb.csv  rails.csv  rails_clipped.dbf  roads.csv  roads_clipped.dbf  roads_clipped.shp  roads_clipped.shx
data/temp/: 150_clipped.dbf  150_clipped.shp  150_clipped.shx  150_reprojected.shp  150_reprojected.shx  150_verctices.dbf  150_verctices.shp  150_verctices.shx  180_clipped.dbf  180_clipped.shp  180_clipped.shx  180_reprojected.dbf  180_reprojected.shp  180_reprojected.shx  180_verctices.dbf  180_verctices.shp  180_verctices.shx  boundary_verctices.dbf  boundary_verctices.shp  boundary_verctices.shx  fbs_clipped.dbf  fbs_clipped.shp  fbs_clipped.shx  fbs_dissolved.dbf  fbs_dissolved.shp  fbs_dissolved.shx  fsb_reproject.dbf  fsb_reproject.shp  fsb_reproject.shx  fsb_verctices.dbf  fsb_verctices.shp  fsb_verctices.shx  path_points.dbf  path_points.shp  path_points.shx  plan_area.shp  plan_area.shx  rails_clipped.dbf  rails_verctices.dbf  roads_clipped.dbf  (+5 more)
